add print memory info